...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <SeekBar
            android:id="@+id/seekbar_dialog_seekbar_master_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip" />
    </LinearLayout>

    <TextView
...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_lock_idle_alarm" />

        <SeekBar
            android:id="@+id/seekbar_dialog_seekbar_prealarm_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dip" />
    </LinearLayout>
</LinearLayout>
