<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/linearLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/calculateButton"
    android:layout_width="210dp"
    android:layout_height="60dp"
    android:onClick="sendResult"
    android:text="Calculate"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.754" />

  <EditText
    android:id="@+id/input"
    android:layout_width="300dp"
    android:layout_height="49dp"
    android:ems="10"
    android:hint="Enter expression to evaluate"
    android:inputType="textPersonName"
    android:textSize="20dp"
    app:layout_constraintBottom_toTopOf="@+id/comment"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.51"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.79" />

  <EditText
    android:id="@+id/comment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:ems="10"
    android:hint="Enter comment"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/calculateButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>